[gd_scene load_steps=6 format=2]

[ext_resource path="res://ui/HUD/HUD.gd" type="Script" id=1]
[ext_resource path="res://ui/font.tres" type="DynamicFont" id=2]
[ext_resource path="res://components/items/currency/crystal/crystal.png" type="Texture" id=3]
[ext_resource path="res://components/items/currency/coin/coin.png" type="Texture" id=4]
[ext_resource path="res://ui/InvItem/InvItem.tscn" type="PackedScene" id=5]

[node name="HUD" type="CanvasLayer"]
layer = 5
script = ExtResource( 1 )

[node name="Weapon" parent="." instance=ExtResource( 5 )]
margin_left = 9.0
margin_top = 8.0
margin_right = 41.0
margin_bottom = 40.0

[node name="Counters" type="VBoxContainer" parent="."]
anchor_left = 0.98
anchor_top = 0.02
anchor_right = 1.0
anchor_bottom = 0.027
margin_left = -30.0
margin_bottom = 26.0

[node name="CoinsContainer" type="HBoxContainer" parent="Counters"]
margin_right = 42.0
margin_bottom = 11.0

[node name="TextureRect" type="TextureRect" parent="Counters/CoinsContainer"]
margin_right = 8.0
margin_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource( 4 )

[node name="CoinsLabel" type="Label" parent="Counters/CoinsContainer"]
margin_left = 12.0
margin_right = 30.0
margin_bottom = 11.0
custom_fonts/font = ExtResource( 2 )
text = "000"

[node name="CrystalsContainer" type="HBoxContainer" parent="Counters"]
margin_top = 15.0
margin_right = 42.0
margin_bottom = 26.0

[node name="TextureRect" type="TextureRect" parent="Counters/CrystalsContainer"]
margin_right = 8.0
margin_bottom = 11.0
texture = ExtResource( 3 )

[node name="CrystalsLabel" type="Label" parent="Counters/CrystalsContainer"]
margin_left = 12.0
margin_right = 30.0
margin_bottom = 11.0
custom_fonts/font = ExtResource( 2 )
text = "000"
